Fixed a lot of bugs and did more styling to make it consistent.The profile section still is not working correctly - maybe Bob can jump on that. Next up, statistics.

--- a/uniVote/accounts/static/homepage.css
+++ b/uniVote/accounts/static/homepage.css
@@ -2,7 +2,22 @@ body
 {
     background-color: #3498db;
     font-family: Helvetica;
+    color: #2c3e50;
 }
+
+
+h1,h2,h3,h4,h5,h6
+{
+    color: #2c3e50;
+}
+
+
+h1
+{
+    margin-top: 2em;
+    margin-left: 4em;
+}
+
 
 
 a
@@ -78,7 +93,7 @@ a.regToVote
 
 #uniLogo
 {
-    margin-left: 2em;
+    margin-left: 5em;
     border-radius: 20px;
     height: 175px;
     width: 600px;
@@ -119,6 +134,46 @@ a.registerToVote
 {
     display:block;
 }
+
+
+hr
+{
+    color: white;
+    border-color: white;
+    background-color: white;
+    height: 2px;
+    border: none;
+}
+
+
+
+#becomeCandidateButton
+{
+    margin-top: 1em;
+    margin-left: 11.2em;
+    width: 220px;
+    height: 30px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+    background-image: -moz-linear-gradient(top,#f1c40f, #f39c12);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f1c40f), to(#f39c12));
+    border-radius: 5px;
+    border: 1px solid #66add6;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .3), inset 0 1px 0 rgba(255, 255, 255, .5);
+    cursor: pointer;
+    outline: none;
+}
+
+
+#becomeCandidateButton:active
+{
+    box-shadow: none;
+}
+
+
+
+
 
 
 
